feat(core): suporta configuração YAML multi-documento (multi-profile)
Migra ConfigFile de Map<String,String> direto para List<ConfigDocument>,
permitindo representar múltiplos blocos YAML separados por "---" dentro
de um mesmo arquivo application.yml.

ConfigLoader.loadYaml passa a usar yaml.loadAll() em vez de yaml.load(),
extraindo spring.config.activate.on-profile de cada documento bruto e
agrupando/fundindo documentos com o mesmo rótulo de profile entre si
(múltiplos blocos "base" ou múltiplos blocos do mesmo profile nomeado
são consolidados num só). A chave de metadado on-profile é removida
do mapa achatado resultante.

Corrige também um bug de invariante: arquivo YAML vazio ou só com
comentários agora gera 1 ConfigDocument base com mapa vazio, em vez
de uma lista de documentos vazia.

Este loader ainda NÃO funde configuração base com profile — essa
responsabilidade é do ProfileMerger, a ser implementado no próximo
sprint. ConfigFile.properties() foi removido; consumidores devem
navegar via ConfigFile.documents().

Refs: preparação para SCG002+ com detecção correta de exposição
por profile (evita falso positivo/negativo quando segurança está
configurada no bloco base mas exposição no bloco de profile).